# Jarvis

./: .env.example  .gitignore  .prettierrc  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: .gitkeep
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  planner.py
backend/app/api/: auth.py  chat.py  conversations.py  dependencies.py  health.py
backend/app/config/: __init__.py  settings.py
backend/app/core/: __init__.py  errors.py  logging.py  security.py
backend/app/database/: __init__.py  base.py  session.py
backend/app/llm/: __init__.py  factory.py  openai_compatible.py  provider.py
backend/app/memory/: __init__.py  service.py
backend/app/models/: __init__.py  conversation.py  user.py
backend/app/schemas/: auth.py  chat.py  conversation.py  health.py
backend/app/services/: __init__.py  ai.py  conversation_manager.py  execution_engine.py
backend/app/tools/: __init__.py  builtin.py  factory.py  registry.py  router.py
backend/app/utils/: __init__.py  ids.py
backend/app/voice/: __init__.py  service.py
backend/app/websocket/: router.py
backend/tests/: conftest.py  test_conversation.py  test_execution_engine.py  test_health.py  test_memory.py  test_planner.py  test_tools.py
docker/: postgres-init.sql
docs/: architecture.md
frontend/: .prettierignore  Dockerfile  eslint.config.mjs  next.config.ts  package-lock.json  package.json  postcss.config.mjs  tailwind.config.ts
scripts/: dev.ps1
(+13 files in other folders)
